--- a/index.html
+++ b/index.html
@@ -17,27 +17,17 @@
       background: #1a1a2e;
       color: #eee;
       padding: 20px;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
     }
 
     .container {
       max-width: 1400px;
       margin: 0 auto;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      overflow: hidden;
     }
 
     h1 {
       text-align: center;
       margin-bottom: 20px;
       color: #00d9ff;
-      flex-shrink: 0;
     }
 
     .controls {
@@ -49,7 +39,6 @@
       flex-wrap: wrap;
       gap: 15px;
       align-items: center;
-      flex-shrink: 0;
     }
 
     .control-group {
@@ -136,17 +125,12 @@
     .visualizer-wrapper {
       position: relative;
       width: 100%;
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      min-height: 300px;
-      overflow: hidden;
     }
 
     #canvas {
       display: block;
       width: 100%;
-      height: 100%;
+      height: 600px;
       background: #0f3460;
       border-radius: 10px;
     }
@@ -177,7 +161,6 @@
       justify-content: space-around;
       flex-wrap: wrap;
       gap: 15px;
-      flex-shrink: 0;
     }
 
     .stat-item {
@@ -224,7 +207,6 @@
           <option value="selection">選択ソート</option>
           <option value="insertion">挿入ソート</option>
           <option value="quick">クイックソート</option>
-          <option value="quick-mt">クイックソート(マルチスレッド)</option>
           <option value="merge">マージソート</option>
           <option value="heap">ヒープソート</option>
           <option value="shell">シェルソート</option>
@@ -249,9 +231,6 @@
           <option value="radix-hex">基数ソート(基数16/16進数)</option>
           <option value="counting">カウントソート</option>
           <option value="bucket">バケットソート</option>
-          <option value="pdq">PDQソート</option>
-          <option value="block">ブロックソート</option>
-          <option value="spread">スプレッドソート</option>
         </select>
       </div>
 
@@ -260,15 +239,6 @@
         <select id="layout">
           <option value="linear">横並び</option>
           <option value="radial">円形</option>
-        </select>
-      </div>
-
-      <div class="control-group">
-        <label for="distribution">初期状態</label>
-        <select id="distribution">
-          <option value="random">ランダム</option>
-          <option value="nearly-sorted">8割ソート済み</option>
-          <option value="reversed">反転(大→小)</option>
         </select>
       </div>
 
