一時的にアルゴリズムを制限

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <option value="quick">クイックソート</option>
           <option value="merge">マージソート</option>
           <option value="heap">ヒープソート</option>
-          <option value="shell">シェルソート</option>
+          <!-- <option value="shell">シェルソート</option>
           <option value="comb">コムソート</option>
           <option value="cocktail">カクテルシェーカーソート</option>
           <option value="gnome">ノームソート</option>
@@ -230,7 +230,7 @@
           <option value="radix-binary">基数ソート(基数2/バイナリ)</option>
           <option value="radix-hex">基数ソート(基数16/16進数)</option>
           <option value="counting">カウントソート</option>
-          <option value="bucket">バケットソート</option>
+          <option value="bucket">バケットソート</option> -->
         </select>
       </div>
 
